# digitador_piamarta

./: .gitignore  BIOPAE DEMO .pptx  CMakeLists.txt  DetenerDigitador.bat  EstadoSistema.bat  IniciarDigitador.ps1  IniciarTodo.bat  Instalar.bat  LEEME_PRIMERO.txt  README.md  README_SECURITY.md  REMEDIATION_GUIDE.md  RESUMEN_FINAL.txt  Redme.md  SECURITY_AUDIT_REPORT.md  SECURITY_CODE_FIXES.md  SECURITY_STATUS_VISUAL.txt  SECURITY_SUMMARY.md  VULNERABILITY_CHECKLIST.md  alumnos.xlsx  build&Run.bat  cleanup_logs.ps1  estructuraPreExe.txt  estructura_final.txt  estructura_huellero.txt  guia_instalacion.md  instalacion.txt  instalar_sandbox.bat  main.cpp  main.js  main_OLD.js  nueva_estructura.txt  package-lock.json  package.json  precarga.jsx  sandbox.txt  start_all.ps1  verify_api.ps1
Digitador/: .claudeignore  CLAUDE.md  estructura.txt  funcs.txt  go.mod  go.sum  reporte_resolucion.md.resolved  walkthrough.md
Digitador/cmd/: main.go
Digitador/infra/: ElectronTotem.go  main.go  presentacion.go
Digitador/src/: build&Run.bat  main.cpp
cpp/: DB_Backend.cpp  HardwareManager.cpp  Sensor.cpp
h/: Business_Logic.hpp  DB_Backend.hpp  SDK.hpp  Sensor.h  Sync_Service.h  TPL_utils.hpp
scripts/: build_deploy.ps1  setup_nuc.ps1
src/: CMakeLists.txt  build&Run.bat  buildAndRun.bat  buildAndRunWebServer.bat  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  main.cpp  mainAddon.cpp  mi_huella.tpl  script.txt
totem/: index.html  main.js  package-lock.json  package.json  package_builder.json  preload.js  renderer.js  styles.css  totem.bat
(+107 files in other folders)
